# Android-OpenCV

./: .gitignore  README.md
app/src/main/java/com/example/edgeviewer/: MainActivity.java
gl/: GLRenderer.java
jni/: CMakeLists.txt  native-lib.cpp
web/: index.html  main.ts  tsconfig.json
